test/types/range/cast-assign-init/illegal-inits.2-4.good
illegal-inits.chpl:8: error: initializing a range with idxType int(8) from a range with idxType int(64)
